# vbmeta-generator

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  avb-overview.md  avbtool-reference.md  boot-image-tools.md  dm-verity-and-fec.md  filesystem-tools.md  image-formats.md  super-partitions.md  vbmeta.md  verity-tools.md
vbmeta_generator/: avb.py  cli.py  image.py  orchestrator.py  properties.py  super_partition.py  utils.py
vbmeta_generator/lib64/: ld-linux-x86-64.so.2  libc.so.6  libm.so.6
